--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -110,7 +110,7 @@
     <section class="container-split">
       <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/boundaries.webp" alt="Home office setup for work-life balance"
+        <img src="img/boundaries.webp" alt="Respect my boundaries"
           title="Home workspace setup for maintaining boundaries">
         <figcaption>
           Setting up a dedicated workspace at home supports a balanced work-life routine and prevents burnout.
@@ -140,7 +140,7 @@
     <section class="container-split">
       <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/seek-help-picture1.webp" alt="Mental health support concept"
+        <img src="img/seek-help-picture1.webp" alt="Seek mental health support"
           title="Mental health support for burnout recovery">
         <figcaption>
           Seeking mental health support is essential for managing stress and overcoming burnout.
