--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <section class="contact-container">
             <h2 class="visually-hidden">.</h2>
             <figure class="picture">
-                <img src="img/Contact-Page-picture.webp" alt="Contact page visual showing people connecting">
+                <img src="img/Contact-Page-picture.webp" alt="Contact of a calm park (Kralingse Bos)">
             </figure>
 
             <!-- FORM SECTION -->
