--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <section class="container-split">
       <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/playing-games.webp" alt="playing table game">
+        <img src="img/playing-games.webp" alt="playing air hockey game" title="Engaging in an Air Hockey Game">
       </figure>
       <article class="text-box">
         <h2>Key Features Overview</h2>
