--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -110,8 +110,7 @@
     <section class="container-split">
       <h2 class="visually-hidden">.</h2>
       <figure class="picture-box">
-        <img src="img/boundaries.webp" alt="Respect my boundaries"
-          title="Home workspace setup for maintaining boundaries">
+        <img src="img/boundaries.webp" alt="Respect my boundaries" title="Learn how to set and maintaining boundaries">
         <figcaption>
           Setting up a dedicated workspace at home supports a balanced work-life routine and prevents burnout.
         </figcaption>
