--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,8 @@
         <section class="contact-container">
             <h2 class="visually-hidden">.</h2>
             <figure class="picture">
-                <img src="img/Contact-Page-picture.webp" alt="Contact of a calm park (Kralingse Bos)">
+                <img src="img/Contact-Page-picture.webp" alt="Contact of a calm park (Kralingse Bos)"
+                    title="Tranquil View of Kralingse Bos Park's Serene Landscape">
             </figure>
 
             <!-- FORM SECTION -->
