--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="general-styles.css">
+    <link rel="stylesheet" href="thank-you-page.css">
     <title>Thank you for contacting us</title>
 </head>
 
