--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="general-styles.css">
-    <link rel="stylesheet" href="thank-you-page.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/general-styles.css">
+    <link rel="stylesheet" type="text/css" href="css/thank-you-page.css">
     <title>Thank you for contacting us</title>
 </head>
-
-
 
 <body>
     <main>
@@ -41,6 +39,7 @@
                 <h1 class="hero-heading">Thank you for contanctig us!</h1>
                 <p>We received your message.</p>
                 <p>We will reach out immediately!</p>
+                <a href="index.html" class="general-button">Return back to Homepage</a>
             </section>
         </header>
     </main>
