Thank you page update 4

--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -39,7 +39,7 @@
                 <h1 class="hero-heading">Thank you for contanctig us!</h1>
                 <p>We received your message.</p>
                 <p>We will reach out immediately!</p>
-                <a href="index.html" class="general-button">Return back to Homepage</a>
+                <a href="index.html" class="hero-button">Return back to Homepage</a>
             </section>
         </header>
     </main>
