Assessment requirements update 1

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                     <textarea id="message" name="message" placeholder="Type your message here" required></textarea>
                 </fieldset>
 
-                <button type="submit">Send</button>
+                <input type="submit"></input>
             </form>
         </section>
     </section>
