--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/general-styles.css">
     <link rel="stylesheet" type="text/css" href="css/thank-you-page.css">
@@ -43,6 +44,45 @@
             </section>
         </header>
     </main>
+
+    <!-- CONNECT WITH US SECTION -->
+    <section class="connect-with-us">
+        <h2>Let's Connect!</h2>
+        <address>
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        </address>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <nav class="quick-links">
+            <p><strong><em>Quick Breaks:</em></strong></p>
+            <ul class="footer-navbar-links">
+                <li><a href="index.html" class="navbar-link">Home</a></li>
+                <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
+                <li><a href="quick-breaks.html" class="navbar-link">Quick Breaks</a></li>
+                <li><a href="chill-spots.html" class="navbar-link">Chill Spots</a></li>
+                <li><a href="workspace-tips.html" class="navbar-link">Workspace Tips</a></li>
+                <li><a href="contact.html" class="navbar-link">Contact</a></li>
+            </ul>
+        </nav>
+        <section class="copyright">
+            <h2 class="visually-hidden">.</h2>
+            <figure class="footer-logo">
+                <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
+                    title="Work Balance logo in footer">
+                <figcaption>Work Balance Logo</figcaption>
+            </figure>
+            <p class="copyright-text">
+                &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
+            </p>
+            <address class="icons">
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            </address>
+        </section>
+    </footer>
 </body>
 
 </html>
