Assessment requirements update 2
a:link
a:hover

--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -78,7 +78,9 @@
           <p>
             Spending time in nature helps you disconnect from work, relax both your mind and body, and boost your
             overall happiness. Connecting with nature also gives your eyes a much-needed break after spending long hours
-            in front of a screen. Learn about the best chill spots in Rotterdam.
+            in front of a screen. Learn
+            about the best chill spots in Rotterdam. <a
+              href="https://weekendsinrotterdam.com/nl/verborgen-plekken-in-rotterdam/">Rotterdam chill spots</a>
           </p>
         </article>
       </figure>
@@ -90,8 +92,9 @@
           <h3>Take a Walk or jog</h3>
           <p>
             Step outside for a 10-minute walk or jog to get fresh air and natural light. This brief break helps refresh
-            your mind, improve your mood, and give you a mental reset. Learn more about the best practices for walking
-            correctly.
+            your mind, improve your mood, and give you a mental reset. Learn
+            more about the best practices for walking correctly: <a href="https://www.wikihow.com/Walk">How to walk with
+              good form.</a>
           </p>
         </article>
       </figure>
@@ -110,8 +113,9 @@
           <h3>Listen to Music</h3>
           <p>
             Play your favorite music or a relaxing playlist to shift your mood. Whether calming or energizing, music
-            helps reset your mindset and can make your work environment more enjoyable. Learn more about the best audio
-            streaming services.
+            helps reset your mindset and can make your work environment more enjoyable. Learn more about the best
+            audio <a href="https://www.pcmag.com/picks/the-best-online-music-streaming-services"> streaming
+              services.</a>
           </p>
         </article>
       </figure>
@@ -123,7 +127,8 @@
           <h3>Hydrate and Snack</h3>
           <p>
             Take a moment to drink water and enjoy a healthy snack. This quick refuel keeps you hydrated and energized,
-            helping you stay focused and refreshed throughout the day. Learn more about healthy snacks.
+            helping you stay focused and refreshed throughout the day. Learn more about<a
+              href="https://www.wikihow.com/Choose-Healthy-Snacks"> healthy snacks</a>.
           </p>
         </article>
       </figure>
