Assessment requirements update 4
Validating with HTML validator (w3 validator)
errors:
1. Error: Stray end tag input.

remove embeded style (<script>) add it in a separate folder.

Fixed home page CTA image not showing

add table.

remove certain things.

--- a/chill-spots.html
+++ b/chill-spots.html
@@ -30,9 +30,9 @@
                 title="Work Balance company logo">
             </a>
           </figure>
-          <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
+          <input type="checkbox" class="toggle-checkbox">
           <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
-          <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
+          <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
               <li><a href="wellbeing-tips.html" class="navigation-item">Wellbeing Tips</a></li>
@@ -41,11 +41,8 @@
               <li><a href="workspace-tips.html" class="navigation-item">Workspace Tips</a></li>
               <li><a href="contact.html" class="navigation-item">Contact</a></li>
             </ul>
-            <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
           </aside>
         </nav>
-
-
         <h1 class="hero-heading">Chill Spots in Rotterdam</h1>
 
       </section>
