--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
                                 title="Work Balance company logo">
                         </a>
                     </figure>
-                    <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
+                    <input type="checkbox" class="toggle-checkbox">
                     <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
-                    <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
+                    <aside class="navigation-links-wrapper">
                         <ul class="navigation-links">
                             <li><a href="index.html" class="navigation-item">Home</a></li>
                             <li><a href="wellbeing-tips.html" class="navigation-item">Wellbeing Tips</a></li>
@@ -39,7 +39,6 @@
                             <li><a href="workspace-tips.html" class="navigation-item">Workspace Tips</a></li>
                             <li><a href="contact.html" class="navigation-item">Contact</a></li>
                         </ul>
-                        <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
                     </aside>
                 </nav>
                 <h1 class="hero-heading">Contact Us</h1>
@@ -103,10 +102,39 @@
                     <textarea id="message" name="message" placeholder="Type your message here" required></textarea>
                 </fieldset>
 
-                <input type="submit"></input>
+                <input type="submit">
             </form>
         </section>
     </section>
+
+    <!-- TABLE -->
+    <!-- The assesment does not make it clear. I am unsure what I need to do with a table. If I don't have a table in my design. -->
+    <section class="table">
+        <table>
+            <caption>This is a table.</caption>
+            <tr>
+                <th>Name</th>
+                <th>Last Name</th>
+                <th>Current Country</th>
+            </tr>
+            <tr>
+                <th>Leandro</th>
+                <th>Nuñez</th>
+                <th>Netherlands</th>
+            </tr>
+            <tr>
+                <th>Will</th>
+                <th>Smith</th>
+                <th>United State of America (USA)</th>
+            </tr>
+            <tr>
+                <th>Denzel</th>
+                <th>Washington</th>
+                <th>United State of America (USA)</th>
+            </tr>
+        </table>
+    </section>
+
 
     <!-- FOOTER -->
     <footer class="footer">
