--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 title="Work Balance company logo">
             </a>
           </figure>
-          <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
+          <input type="checkbox" class="toggle-checkbox">
           <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
-          <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
+          <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
               <li><a href="wellbeing-tips.html" class="navigation-item">Wellbeing Tips</a></li>
@@ -41,7 +41,6 @@
               <li><a href="workspace-tips.html" class="navigation-item">Workspace Tips</a></li>
               <li><a href="contact.html" class="navigation-item">Contact</a></li>
             </ul>
-            <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
           </aside>
         </nav>
         <h1 class="hero-heading">Welcome to Work Balance!</h1>
@@ -252,9 +251,7 @@
   </article>
 
   <!-- JAVASCRIPT FOR THE COOKIES BOX YES OR NO -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => ["yesButton", "noButton"].forEach(id => document.getElementById(id).onclick = () => centeredBox.style.display = "none"));
-  </script>
+  <script src="js/cookie.js"></script>
 </body>
 
 </html>
