--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -23,9 +23,9 @@
                                 title="Work Balance company logo">
                         </a>
                     </figure>
-                    <input type="checkbox" id="menu-toggle-checkbox" class="toggle-checkbox">
+                    <input type="checkbox" class="toggle-checkbox">
                     <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
-                    <aside class="navigation-links-wrapper" id="mainNavigationLinks" aria-label="Primary Navigation">
+                    <aside class="navigation-links-wrapper">
                         <ul class="navigation-links">
                             <li><a href="index.html" class="navigation-item">Home</a></li>
                             <li><a href="wellbeing-tips.html" class="navigation-item">Wellbeing Tips</a></li>
@@ -34,7 +34,6 @@
                             <li><a href="workspace-tips.html" class="navigation-item">Workspace Tips</a></li>
                             <li><a href="contact.html" class="navigation-item">Contact</a></li>
                         </ul>
-                        <label for="menu-toggle-checkbox" class="close-menu-label">Close</label>
                     </aside>
                 </nav>
                 <h1 class="hero-heading">Thank you for contanctig us!</h1>
