Assessment requirements update 5
Make some general changes.

Add a GIF of a cat dancing. To use Float property.
Make the table look nicer.

--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -20,10 +20,8 @@
                     <figure class="brand-logo">
                         <a href="index.html">
                             <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
-                                title="Work Balance company logo">
-                        </a>
+                                title="Work Balance company logo"></a>
                     </figure>
-                    <input type="checkbox" class="toggle-checkbox">
                     <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
                     <aside class="navigation-links-wrapper">
                         <ul class="navigation-links">
