--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,8 @@
                     <figure class="brand-logo">
                         <a href="index.html">
                             <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
-                                title="Work Balance company logo">
-                        </a>
+                                title="Work Balance company logo"></a>
                     </figure>
-                    <input type="checkbox" class="toggle-checkbox">
                     <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
                     <aside class="navigation-links-wrapper">
                         <ul class="navigation-links">
@@ -133,6 +131,10 @@
                 <th>United State of America (USA)</th>
             </tr>
         </table>
+        <section class="cat-vibing">
+            <img src="img/cat-vibing.gif" alt="A cartoon cat dancing" title="A cartoon cat dancing and vibing."
+                class="cat-dancing">
+        </section>
     </section>
 
 
