--- a/contact.html
+++ b/contact.html
@@ -17,17 +17,19 @@
 </head>
 
 <body>
+
+    <!-- HERO SECTION -->
     <main>
         <header class="hero-section">
             <section class="hero-content">
-                <h2 class="visually-hidden">.</h2>
+                <h2 class="visually-hidden">All content regarding the hero section.</h2>
                 <nav class="main-navigation">
                     <figure class="brand-logo">
                         <a href="index.html">
                             <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                                 title="Work Balance company logo"></a>
                     </figure>
-                    <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+                    <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
                     <aside class="navigation-links-wrapper">
                         <ul class="navigation-links">
                             <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -46,16 +48,16 @@
 
     <!-- CONTACT SECTION -->
     <section class="contact-section">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Main container for "Contact" section</h2>
         <section class="contact-container">
-            <h2 class="visually-hidden">.</h2>
+            <h2 class="visually-hidden">inner container for "Contact" section</h2>
             <figure class="picture">
                 <img src="img/Contact-Page-picture.webp" alt="Contact of a calm park (Kralingse Bos)"
                     title="Tranquil View of Kralingse Bos Park's Serene Landscape">
             </figure>
 
             <!-- FORM SECTION -->
-            <form class="form">
+            <form class="form" action="thank-you-page.html" method="get">
                 <fieldset class="radio-group-container">
                     <legend>Choose your salutation*</legend>
                     <fieldset class="radio-group">
@@ -99,7 +101,6 @@
                     <label for="message">Message*</label>
                     <textarea id="message" name="message" placeholder="Type your message here" required></textarea>
                 </fieldset>
-
                 <input type="submit">
             </form>
         </section>
@@ -107,33 +108,38 @@
 
     <!-- TABLE -->
     <!-- The assesment does not make it clear. I am unsure what I need to do with a table. If I don't have a table in my design. -->
+    <!-- This is not part of my FIGMA design, but I included it because I had no other way of including a table. (So I included it here.)-->
+    <!-- I added some information that links to my website. -->
     <section class="table">
+        <h2 class="visually-hidden">Table for the assessment.</h2>
         <table>
-            <caption>This is a table.</caption>
+            <caption>Impact of Work-Life Balance on Depression</caption>
             <tr>
-                <th>Name</th>
-                <th>Last Name</th>
-                <th>Current Country</th>
+                <th>Statistic</th>
+                <th>Detail</th>
+                <th>Source</th>
             </tr>
             <tr>
-                <th>Leandro</th>
-                <th>Nuñez</th>
-                <th>Netherlands</th>
+                <th>Work-Related Stress</th>
+                <th>About 79% of employees report experiencing work-related stress, which can lead to depression.</th>
+                <th>American Institute of Stress</th>
             </tr>
             <tr>
-                <th>Will</th>
-                <th>Smith</th>
-                <th>United State of America (USA)</th>
+                <th>Impact on Productivity</th>
+                <th>Depression leads to a 35% reduction in productivity at work due to symptoms like fatigue and lack of
+                    concentration.</th>
+                <th>World Health Organization (WHO)</th>
             </tr>
             <tr>
-                <th>Denzel</th>
-                <th>Washington</th>
-                <th>United State of America (USA)</th>
+                <th>Burnout and Depression Link</th>
+                <th>Employees experiencing burnout are 2.6 times more likely to also report symptoms of depression.</th>
+                <th>Gallup</th>
             </tr>
         </table>
-        <section class="cat-vibing">
-            <img src="img/cat-vibing.gif" alt="A cartoon cat dancing" title="A cartoon cat dancing and vibing."
-                class="cat-dancing">
+        <section class="take-care">
+            <h2 class="visually-hidden">A cat dancing and vibing.</h2>
+            <img src="img/take-care-picture.jpg" alt="A picture with a profound message."
+                title="A picture remainding us to take care of ourself" class="take-care-picture">
         </section>
     </section>
 
@@ -152,7 +158,7 @@
             </ul>
         </nav>
         <section class="copyright">
-            <h2 class="visually-hidden">.</h2>
+            <h2 class="visually-hidden">Main container for the part below quick links.</h2>
             <figure class="footer-logo">
                 <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
                     title="Work Balance logo in footer">
