--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -18,17 +18,19 @@
 </head>
 
 <body>
+
+  <!-- HERO SECTION -->
   <main>
     <header class="hero-section">
       <section class="hero-content">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo"></a>
           </figure>
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -47,9 +49,9 @@
 
   <!-- NEED A BREAK SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "NEED A BREAK" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container for "NEED A BREAK" section.</h2>
       <article>
         <h2>Need a break?</h2>
         <h3>Here are some quick activities to refresh your mind and body during your workday.</h3>
@@ -64,9 +66,9 @@
 
   <!-- BLOCKS WITH IMAGES ANF INFORMATION SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "BLOCKS WITH IMAGES" section.</h2>
     <section class="inner-blocks white-background">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container for "BLOCKS WITH IMAGES" section.</h2>
       <figure class="image-block-1">
         <img src="img/connect-with-nature.webp" alt="Nature scene for relaxation"
           title="Connect with Nature - Relaxing activity" class="image-block">
@@ -77,7 +79,8 @@
             overall happiness. Connecting with nature also gives your eyes a much-needed break after spending long hours
             in front of a screen. Learn
             about the best chill spots in Rotterdam. <a
-              href="https://weekendsinrotterdam.com/nl/verborgen-plekken-in-rotterdam/">Rotterdam chill spots</a>
+              href="https://weekendsinrotterdam.com/nl/verborgen-plekken-in-rotterdam/" target="_blank">Rotterdam chill
+              spots</a>
           </p>
         </article>
       </figure>
@@ -90,7 +93,8 @@
           <p>
             Step outside for a 10-minute walk or jog to get fresh air and natural light. This brief break helps refresh
             your mind, improve your mood, and give you a mental reset. Learn
-            more about the best practices for walking correctly: <a href="https://www.wikihow.com/Walk">How to walk with
+            more about the best practices for walking correctly: <a href="https://www.wikihow.com/Walk"
+              target="_blank">How to walk with
               good form.</a>
           </p>
         </article>
@@ -100,9 +104,9 @@
 
   <!-- BLOCKS WITH IMAGES ANF INFORMATION SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "BLOCKS WITH IMAGES" section.</h2>
     <section class="inner-blocks">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container for "BLOCKS WITH IMAGES" section.</h2>
       <figure class="image-block-1">
         <img src="img/listening-to-music.webp" alt="Listening to music with headphones"
           title="Listen to Music - Refreshing activity" class="image-block">
@@ -111,7 +115,8 @@
           <p>
             Play your favorite music or a relaxing playlist to shift your mood. Whether calming or energizing, music
             helps reset your mindset and can make your work environment more enjoyable. Learn more about the best
-            audio <a href="https://www.pcmag.com/picks/the-best-online-music-streaming-services"> streaming
+            audio <a href="https://www.pcmag.com/picks/the-best-online-music-streaming-services" target="_blank">
+              streaming
               services.</a>
           </p>
         </article>
@@ -125,7 +130,7 @@
           <p>
             Take a moment to drink water and enjoy a healthy snack. This quick refuel keeps you hydrated and energized,
             helping you stay focused and refreshed throughout the day. Learn more about<a
-              href="https://www.wikihow.com/Choose-Healthy-Snacks"> healthy snacks</a>.
+              href="https://www.wikihow.com/Choose-Healthy-Snacks" target="_blank"> healthy snacks</a>.
           </p>
         </article>
       </figure>
@@ -146,7 +151,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
