--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -23,15 +23,14 @@
   <main>
     <header class="hero-section">
       <section class="hero-content">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
-                title="Work Balance company logo">
-            </a>
+                title="Work Balance company logo"></a>
           </figure>
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -50,9 +49,9 @@
 
   <!-- WHAT IS BURNOUT? SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "WHAT IS BURNOUT" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container of "WHAT IS BURNOUT" section.</h2>
       <article>
         <h2>What is burnout?</h2>
         <h3>Understanding Burnout</h3>
@@ -73,9 +72,9 @@
 
   <!-- TAKE BREAKS SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "WHAT IS BURNOUT" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Container split in 2.</h2>
       <figure class="picture-box">
         <img src="img/playing-table-games.webp" alt="Two people playing a table game for social engagement"
           title="Engaging in social games for mental well-being">
@@ -104,9 +103,9 @@
 
   <!-- BOUNDARIES SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "BOUNDARIES" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Container split in 2.</h2>
       <figure class="picture-box">
         <img src="img/boundaries.webp" alt="Respect my boundaries" title="Learn how to set and maintaining boundaries">
         <figcaption>
@@ -132,10 +131,11 @@
     </section>
   </section>
 
+  <!-- SEEK MENTAL HEALTH SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "SEEK MENTAL HELP" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Container split in 2.</h2>
       <figure class="picture-box">
         <img src="img/seek-help-picture1.webp" alt="Seek mental health support"
           title="Mental health support for burnout recovery">
@@ -164,9 +164,9 @@
 
   <!-- PRACTICE SELFCARE SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "PRACTICE SELFCARE" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Container split in 2.</h2>
       <figure class="picture-box">
         <img src="img/girl-reading-book.webp" alt="Person reading a book for relaxation"
           title="Practicing self-care through reading">
@@ -195,9 +195,9 @@
 
   <!-- ISOLATION SECTION -->
   <section class="isolation">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "ISOLATION" section.</h2>
     <section class="inner-isolation">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container containing all content.</h2>
       <article class="isolation-text">
         <h2>Dealing with Isolation</h2>
         <p>
@@ -218,9 +218,9 @@
 
       <!-- INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Container containing all 3 blocks.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 1 container.</h2>
           <p><strong>1. Schedule Virtual Coffee Chats</strong></p>
           <p>
             Stay socially connected by making regular virtual coffee breaks
@@ -231,7 +231,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 2 container.</h2>
           <p>
             <strong>2. Join Online Communities with Shared Interests</strong>
           </p>
@@ -243,7 +243,7 @@
         </article>
 
         <article class="block-3">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 3 container.</h2>
           <p><strong>3. Take Part in Offline Activities</strong></p>
           <p>
             Step away from the screen by participating in local events,
@@ -256,9 +256,9 @@
 
       <!-- INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Container containing all 3 blocks.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 4 container.</h2>
           <p><strong>4. Work from Co-Working Spaces</strong></p>
           <p>
             Co-working spaces offer an opportunity to work alongside others,
@@ -269,7 +269,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 5 container.</h2>
           <p>
             <strong>5. Set Up a Buddy System</strong>
           </p>
@@ -281,7 +281,7 @@
         </article>
 
         <article class="block-3">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 6 container.</h2>
           <p><strong>6. Volunteer in Your Community</strong></p>
           <p>
             Get involved in local volunteering opportunities. Helping others
@@ -307,7 +307,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
