--- a/chill-spots.html
+++ b/chill-spots.html
@@ -19,18 +19,19 @@
 </head>
 
 <body>
+
+  <!-- HERO SECTION -->
   <main>
     <header class="hero-section">
       <section class="hero-content">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
-                title="Work Balance company logo">
-            </a>
+                title="Work Balance company logo"></a>
           </figure>
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -47,10 +48,11 @@
     </header>
   </main>
 
+  <!-- LOOKING FOR A RELAXED SPOT SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "Looking for a relaxed spot" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container of "Looking for a relaxed spot" section.</h2>
       <article>
         <h2>Looking for a relaxed spot in Rotterdam? You are in the right place!</h2>
         <h3>Here are four unique chill spots in Rotterdam</h3>
@@ -63,12 +65,13 @@
     </section>
   </section>
 
+  <!-- IMAGE BLOCKS SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks white-background">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
       <section class="image-block-1">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/connect-nature.webp" alt="Image of Kralingse Bos park in Rotterdam"
           title="Kralingse Bos - Park in Rotterdam" class="image-block">
         <article>
@@ -79,11 +82,12 @@
             Enjoy scenic views and nature trails to help you clear your mind.
           </p>
         </article>
-        <a href="#" class="general-button">Directions (Google Map)</a>
+        <a href="https://maps.app.goo.gl/Z8Ja4D6Wf3F8AyA98" target="_blank" class="general-button">Directions (Google
+          Map)</a>
       </section>
 
       <section class="image-block-2">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/wellbeing-tips-header.webp" alt="Jan Evertsenplaats in the heart of Rotterdam"
           title="Jan Evertsenplaats - Quiet park in Rotterdam" class="image-block">
         <article>
@@ -93,17 +97,19 @@
             reading, or simply unwinding.
           </p>
         </article>
-        <a href="#" class="general-button">Directions (Google Map)</a>
+        <a href="https://maps.app.goo.gl/hGEY5js8iWGoHVB5A" target="_blank" class="general-button">Directions (Google
+          Map)</a>
       </section>
     </section>
   </section>
 
+  <!-- IMAGE BLOCKS SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
       <section class="image-block-1">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/Joost.webp" alt="Quiet green space at Joost Banckertsplaats in Rotterdam"
           title="Joost Banckertsplaats - Relaxing green area in Rotterdam" class="image-block">
         <article>
@@ -115,11 +121,12 @@
             moment in a modern setting.
           </p>
         </article>
-        <a href="#" class="general-button">Directions (Google Map)</a>
+        <a href="https://maps.app.goo.gl/ikSgC7uJ6x2KgxpZA" target="_blank" class="general-button">Directions (Google
+          Map)</a>
       </section>
 
       <section class="image-block-2">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/Scchowburgplein.webp" alt="Schouwburgplein square in Rotterdam with modern design"
           title="Schouwburgplein - Urban square in Rotterdam" class="image-block">
         <article>
@@ -131,7 +138,8 @@
             space for events, relaxation, and socializing.
           </p>
         </article>
-        <a href="#" class="general-button">Directions (Google Map)</a>
+        <a href="https://maps.app.goo.gl/jinGEuqzK6qPgfRy5" target="_blank" class="general-button">Directions (Google
+          Map)</a>
       </section>
     </section>
   </section>
@@ -150,7 +158,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
