--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <main>
     <header class="hero-section">
       <section class="hero-content">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo"></a>
           </figure>
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -48,9 +48,9 @@
 
   <!-- INTRODUCTION SECTION -->
   <section class="introduction">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for the introduction section.</h2>
     <section class="inner-introduction">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Introduction texts.</h2>
       <article>
         <h2>Supporting Your Journey to Remote Work Success</h2>
         <p>
@@ -75,9 +75,9 @@
 
   <!-- SEMI-CTA SECTION -->
   <section class="section-3">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for section 3.</h2>
     <section class="inner-section-3">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Section 3 texts.</h2>
       <article>
         <h2>Find the Help You Need for a Better Work-Life Balance</h2>
         <p>
@@ -87,7 +87,7 @@
         </p>
       </article>
       <section class="general-buttons">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Buttons wrapper.</h2>
         <a href="wellbeing-tips.html" class="general-button">Wellbeing Tips</a>
         <a href="quick-breaks.html" class="general-button">Quick breaks ideas</a>
         <a href="chill-spots.html" class="general-button">Chill Spots</a>
@@ -97,9 +97,9 @@
 
   <!-- SEMI-CTA SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for section 4.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">All section 4 text</h2>
       <article>
         <h2>Your Guide to Remote Work Wellness</h2>
         <p>
@@ -115,9 +115,9 @@
 
   <!-- FOR WHOM IS THIS WEBSITE SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "FOR WHOM IS THIS WEBSITE" section</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container.</h2>
       <figure class="picture-box">
         <img src="img/girl-using-computer.webp" alt="Girl using computer" title="Girl using computer for remote work">
         <figcaption>
@@ -153,9 +153,9 @@
 
   <!-- KEY FEATURE SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "KEU FEATURE" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container for "KEY FEATURE" section</h2>
       <figure class="picture-box">
         <img src="img/playing-games.webp" alt="playing air hockey game" title="Engaging in an Air Hockey Game">
       </figure>
@@ -183,9 +183,9 @@
 
   <!-- CALL TO ACTION SECTION -->
   <section class="CTA">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for section "CAL TO ACTION" section.</h2>
     <section class="CTA-picture">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container for section "CALL TO ACTION" section.</h2>
       <article class="CTA-text-box">
         <h2>
           Are you ready to change the way you live? Start exploring our
@@ -221,7 +221,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
@@ -242,7 +242,7 @@
     <h2>We use cookies</h2>
     <p>This website use cookies to ensure you get the best experience on our website.</p>
     <section class="button-group">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Cookies buttons wrapper</h2>
       <button class="general-button" id="yesButton">Yes</button>
       <button class="general-button" id="noButton">No</button>
     </section>
