--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -2,27 +2,29 @@
 <html lang="en">
 
 <head>
+    <title>Thank you for contacting us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/general-styles.css">
     <link rel="stylesheet" type="text/css" href="css/thank-you-page.css">
-    <title>Thank you for contacting us</title>
 </head>
 
 <body>
+
+    <!-- HERO SECTION -->
     <main>
         <header class="hero-section">
             <section class="hero-content">
-                <h2 class="visually-hidden">.</h2>
+                <h2 class="visually-hidden">All content regarding the hero section.</h2>
                 <nav class="main-navigation">
                     <figure class="brand-logo">
                         <a href="index.html">
                             <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                                 title="Work Balance company logo"></a>
                     </figure>
-                    <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+                    <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
                     <aside class="navigation-links-wrapper">
                         <ul class="navigation-links">
                             <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -65,7 +67,7 @@
             </ul>
         </nav>
         <section class="copyright">
-            <h2 class="visually-hidden">.</h2>
+            <h2 class="visually-hidden">Main container for the part below quick links.</h2>
             <figure class="footer-logo">
                 <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
                     title="Work Balance logo in footer">
