--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -18,18 +18,19 @@
 </head>
 
 <body>
+
+  <!-- HERO SECTION -->
   <main>
     <header class="hero-section">
       <section class="hero-content">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
-                title="Work Balance company logo">
-            </a>
+                title="Work Balance company logo"></a>
           </figure>
-          <label for="menu-toggle-checkbox" class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -48,9 +49,9 @@
 
   <!-- COMFORTABLE WORKSPACE SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "WORKSPACE" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Inner container for "WORKSPACE" section</h2>
       <article>
         <h2>The Importance of a Comfortable Workspace</h2>
         <p>
@@ -64,18 +65,18 @@
     </section>
   </section>
 
-  <!-- BENEFITS OF A COMFORTABLE SECTION -->
+  <!-- BENEFITS OF A COMFORTABLE WORKSPACE SECTION -->
   <section class="isolation">
-    <h2 class="visually-hidden">.</h2>
+    <h2 class="visually-hidden">Main container for "BENEFITS OF A COMFORTABLE WORKSPACE" section.</h2>
     <section class="inner-isolation">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">inner container for "BENEFITS OF A COMFORTABLE WORKSPACE" section</h2>
       <article class="isolation-text">
         <h2>Benefits of a Comfortable Workspace</h2>
       </article>
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Blocks wrapper</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 1 with all information</h2>
           <p><strong>Physical Health</strong></p>
           <p>
             A comfortable workspace can prevent physical strain and long-term
@@ -88,7 +89,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 2 with all information</h2>
           <p>
             <strong>Improved Focus and Productivity</strong>
           </p>
@@ -103,9 +104,9 @@
       </section>
 
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">.</h2>
+        <h2 class="visually-hidden">Blocks Wrapper</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 3 with all information</h2>
           <p><strong>Mental Well-being</strong></p>
           <p>
             A comfortable and aesthetically pleasing workspace can reduce
@@ -116,7 +117,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">.</h2>
+          <h2 class="visually-hidden">Block 4 with all information</h2>
           <p>
             <strong>Increased Creativity</strong>
           </p>
@@ -145,7 +146,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">.</h2>
+      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
