--- a/chill-spots.html
+++ b/chill-spots.html
@@ -13,8 +13,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/chill-spots.css">
-  <link rel="stylesheet" type="text/css" href="css/general-styles.css">
 
 </head>
 
@@ -23,7 +21,7 @@
   <!-- HERO SECTION -->
   <main>
     <header class="hero-section">
-      <section class="hero-content">
+      <section class="hero-content chill-spots">
         <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
@@ -70,7 +68,7 @@
     <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks white-background">
       <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
-      <section class="image-block-1">
+      <section class="image-block-1  img-chill-spots">
         <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/connect-nature.webp" alt="Image of Kralingse Bos park in Rotterdam"
           title="Kralingse Bos - Park in Rotterdam" class="image-block">
@@ -86,7 +84,7 @@
           Map)</a>
       </section>
 
-      <section class="image-block-2">
+      <section class="image-block-2  img-chill-spots">
         <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/wellbeing-tips-header.webp" alt="Jan Evertsenplaats in the heart of Rotterdam"
           title="Jan Evertsenplaats - Quiet park in Rotterdam" class="image-block">
@@ -108,7 +106,7 @@
     <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks">
       <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
-      <section class="image-block-1">
+      <section class="image-block-1 img-chill-spots">
         <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/Joost.webp" alt="Quiet green space at Joost Banckertsplaats in Rotterdam"
           title="Joost Banckertsplaats - Relaxing green area in Rotterdam" class="image-block">
@@ -125,7 +123,7 @@
           Map)</a>
       </section>
 
-      <section class="image-block-2">
+      <section class="image-block-2 img-chill-spots">
         <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/Scchowburgplein.webp" alt="Schouwburgplein square in Rotterdam with modern design"
           title="Schouwburgplein - Urban square in Rotterdam" class="image-block">
