--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/work-balance-favicon.png">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/contact.css">
-    <link rel="stylesheet" type="text/css" href="css/general-styles.css">
 </head>
 
 <body>
@@ -21,7 +19,7 @@
     <!-- HERO SECTION -->
     <main>
         <header class="hero-section">
-            <section class="hero-content">
+            <section class="hero-content contact-us">
                 <h2 class="visually-hidden">All content regarding the hero section.</h2>
                 <nav class="main-navigation">
                     <figure class="brand-logo">
