--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -13,8 +13,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/quick-breaks.css">
-  <link rel="stylesheet" type="text/css" href="css/general-styles.css">
 </head>
 
 <body>
@@ -22,7 +20,7 @@
   <!-- HERO SECTION -->
   <main>
     <header class="hero-section">
-      <section class="hero-content">
+      <section class="hero-content quick-breaks">
         <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
