--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/general-styles.css">
-    <link rel="stylesheet" type="text/css" href="css/thank-you-page.css">
 </head>
 
 <body>
@@ -16,7 +14,7 @@
     <!-- HERO SECTION -->
     <main>
         <header class="hero-section">
-            <section class="hero-content">
+            <section class="hero-content thank-you">
                 <h2 class="visually-hidden">All content regarding the hero section.</h2>
                 <nav class="main-navigation">
                     <figure class="brand-logo">
@@ -36,10 +34,10 @@
                         </ul>
                     </aside>
                 </nav>
-                <h1 class="hero-heading">Thank you for contanctig us!</h1>
+                <h1 class="hero-heading h1-thank-you">Thank you for contanctig us!</h1>
                 <p>We received your message.</p>
                 <p>We will reach out immediately!</p>
-                <a href="index.html" class="hero-button">Return back to Homepage</a>
+                <a href="index.html" class="hero-button go-back-home">Return back to Homepage</a>
             </section>
         </header>
     </main>
