--- a/chill-spots.html
+++ b/chill-spots.html
@@ -50,7 +50,7 @@
   <section class="section-4">
     <h2 class="visually-hidden">Main container of "Looking for a relaxed spot" section.</h2>
     <section class="inner-section-4">
-      <h3 class="visually-hidden">Inner container of "Looking for a relaxed spot" section.</h3>
+      <h2 class="visually-hidden">Inner container of "Looking for a relaxed spot" section.</h2>
       <article>
         <h2>Looking for a relaxed spot in Rotterdam? You are in the right place!</h2>
         <h3>Here are four unique chill spots in Rotterdam</h3>
@@ -67,7 +67,7 @@
   <section class="image-blocks">
     <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks white-background">
-      <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
+      <h2 class="visually-hidden">Image and articles wrapper for Kralingse Bos.</h2>
       <section class="image-block-1  img-chill-spots">
         <h2 class="visually-hidden">Image and articles wrapper.</h2>
         <img src="img/connect-nature.webp" alt="Image of Kralingse Bos park in Rotterdam"
@@ -85,7 +85,7 @@
       </section>
 
       <section class="image-block-2  img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper for Jan Evertsenplaats.</h2>
         <img src="img/wellbeing-tips-header.webp" alt="Jan Evertsenplaats in the heart of Rotterdam"
           title="Jan Evertsenplaats - Quiet park in Rotterdam" class="image-block">
         <article>
@@ -107,7 +107,7 @@
     <section class="inner-blocks">
       <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
       <section class="image-block-1 img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper for Joost Banckertsplaats.</h2>
         <img src="img/Joost.webp" alt="Quiet green space at Joost Banckertsplaats in Rotterdam"
           title="Joost Banckertsplaats - Relaxing green area in Rotterdam" class="image-block">
         <article>
@@ -124,7 +124,7 @@
       </section>
 
       <section class="image-block-2 img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper.</h2>
+        <h2 class="visually-hidden">Image and articles wrapper for Schouwburgplein.</h2>
         <img src="img/Scchowburgplein.webp" alt="Schouwburgplein square in Rotterdam with modern design"
           title="Schouwburgplein - Urban square in Rotterdam" class="image-block">
         <article>
@@ -145,7 +145,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p><strong><em>Quick Breaks:</em></strong></p>
+      <h2><strong><em>Quick Breaks:</em></strong></h2>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
         <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
@@ -156,11 +156,10 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
+      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
-        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
