--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
 
     <!-- CONTACT SECTION -->
     <section class="contact-section">
-        <h2 class="visually-hidden">Main container for "Contact" section</h2>
+        <h2 class="visually-hidden">Main container for the "Contact" section.</h2>
         <section class="contact-container">
-            <h2 class="visually-hidden">inner container for "Contact" section</h2>
+            <h2 class="visually-hidden">Inner container for the contact form and image.</h2>
             <figure class="picture">
                 <img src="img/Contact-Page-picture.webp" alt="Contact of a calm park (Kralingse Bos)"
                     title="Tranquil View of Kralingse Bos Park's Serene Landscape">
@@ -135,7 +135,7 @@
             </tr>
         </table>
         <section class="take-care">
-            <h2 class="visually-hidden">A cat dancing and vibing.</h2>
+            <h2 class="visually-hidden">Reminder to Take Care</h2>
             <img src="img/take-care-picture.jpg" alt="A picture with a profound message."
                 title="A picture remainding us to take care of ourself" class="take-care-picture">
         </section>
@@ -145,7 +145,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <nav class="quick-links">
-            <p><strong><em>Quick Breaks:</em></strong></p>
+            <h2><strong><em>Quick Breaks:</em></strong></h2>
             <ul class="footer-navbar-links">
                 <li><a href="index.html" class="navbar-link">Home</a></li>
                 <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
@@ -156,11 +156,10 @@
             </ul>
         </nav>
         <section class="copyright">
-            <h2 class="visually-hidden">Main container for the part below quick links.</h2>
+            <h3 class="visually-hidden">Footer Information and Social Links.</h3>
             <figure class="footer-logo">
                 <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
                     title="Work Balance logo in footer">
-                <figcaption>Work Balance Logo</figcaption>
             </figure>
             <p class="copyright-text">
                 &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
