--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- HERO SECTION -->
   <main>
-    <header class="hero-section">
+    <header class="hero-section home-page">
       <section class="hero-content">
         <h2 class="visually-hidden">All content regarding the hero section.</h2>
         <nav class="main-navigation">
@@ -41,6 +41,12 @@
           </aside>
         </nav>
         <h1 class="hero-heading">Welcome to Work Balance!</h1>
+        <p>Your one stop solution for remote work wellness and work-life balance.</p>
+        <section class="hero-buttons">
+          <h2 class="visually-hidden">Hero button wrapper.</h2>
+          <a href="wellbeing-tips.html" class="hero-button">Mental Health Resources</a>
+          <a href="wellbeing-tips.html" class="hero-button">Contact Us</a>
+        </section>
       </section>
     </header>
   </main>
@@ -49,7 +55,7 @@
   <section class="introduction">
     <h2 class="visually-hidden">Main container for the introduction section.</h2>
     <section class="inner-introduction">
-      <h2 class="visually-hidden">Introduction texts.</h2>
+      <h3 class="visually-hidden">Introduction texts.</h3>
       <article>
         <h2>Supporting Your Journey to Remote Work Success</h2>
         <p>
@@ -76,7 +82,7 @@
   <section class="section-3">
     <h2 class="visually-hidden">Main container for section 3.</h2>
     <section class="inner-section-3">
-      <h2 class="visually-hidden">Section 3 texts.</h2>
+      <h3 class="visually-hidden">Section 3 texts.</h3>
       <article>
         <h2>Find the Help You Need for a Better Work-Life Balance</h2>
         <p>
@@ -95,12 +101,12 @@
   </section>
 
   <!-- SEMI-CTA SECTION -->
-  <section class="section-4">
+  <section class="section-4 your-guide">
     <h2 class="visually-hidden">Main container for section 4.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">All section 4 text</h2>
+      <h3 class="visually-hidden">All section 4 text</h3>
       <article>
-        <h2>Your Guide to Remote Work Wellness</h2>
+        <h3>Your Guide to Remote Work Wellness</h3>
         <p>
           Our mission at Work Balance is to help remote workers maintain
           a healthy work life balance. We offer a range of wellness resources,
@@ -116,7 +122,7 @@
   <section class="split-in-2 reverse white-bg">
     <h2 class="visually-hidden">Main container for "FOR WHOM IS THIS WEBSITE" section</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Inner container.</h2>
+      <h3 class="visually-hidden">Inner container.</h3>
       <figure class="picture-box">
         <img src="img/girl-using-computer.webp" alt="Girl using computer" title="Girl using computer for remote work">
         <figcaption>
@@ -125,7 +131,7 @@
         </figcaption>
       </figure>
       <article class="text-box">
-        <h2>For Whom is This Website?</h2>
+        <h3>For Whom is This Website?</h3>
         <p>
           <strong><em>Whether you are a remote worker or a freelancer, Work Balance
               is made for you.</em> </strong> We know that balancing your personal life and work can be
@@ -154,12 +160,12 @@
   <section class="split-in-2">
     <h2 class="visually-hidden">Main container for "KEU FEATURE" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Inner container for "KEY FEATURE" section</h2>
+      <h3 class="visually-hidden">Inner container for "KEY FEATURE" section</h3>
       <figure class="picture-box">
         <img src="img/playing-games.webp" alt="playing air hockey game" title="Engaging in an Air Hockey Game">
       </figure>
       <article class="text-box">
-        <h2>Key Features Overview</h2>
+        <h3>Key Features Overview</h3>
         <p>
           At Work Balance, we understand how important it is for remote
           workers to keep a healthy balance between personal and work life.
@@ -184,12 +190,12 @@
   <section class="CTA">
     <h2 class="visually-hidden">Main container for section "CAL TO ACTION" section.</h2>
     <section class="CTA-picture">
-      <h2 class="visually-hidden">Inner container for section "CALL TO ACTION" section.</h2>
+      <h3 class="visually-hidden">Inner container for section "CALL TO ACTION" section.</h3>
       <article class="CTA-text-box">
-        <h2>
+        <h3>
           Are you ready to change the way you live? Start exploring our
           wellness tips today!
-        </h2>
+        </h3>
         <p>
           <b>
             Beginning your journey to a balanced life can feel overwhelming,
@@ -209,7 +215,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p><strong><em>Quick Breaks:</em></strong></p>
+      <h2><strong><em>Quick Breaks:</em></strong></h2>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
         <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
@@ -220,11 +226,10 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
+      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
-        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
@@ -241,7 +246,7 @@
     <h2>We use cookies</h2>
     <p>This website use cookies to ensure you get the best experience on our website.</p>
     <section class="button-group">
-      <h2 class="visually-hidden">Cookies buttons wrapper</h2>
+      <h3 class="visually-hidden">Cookies buttons wrapper</h3>
       <button class="general-button" id="yesButton">Yes</button>
       <button class="general-button" id="noButton">No</button>
     </section>
