--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -54,7 +54,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <nav class="quick-links">
-            <p><strong><em>Quick Breaks:</em></strong></p>
+            <h2><strong><em>Quick Breaks:</em></strong></h2>
             <ul class="footer-navbar-links">
                 <li><a href="index.html" class="navbar-link">Home</a></li>
                 <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
@@ -65,11 +65,10 @@
             </ul>
         </nav>
         <section class="copyright">
-            <h2 class="visually-hidden">Main container for the part below quick links.</h2>
+            <h3 class="visually-hidden">Footer Information and Social Links.</h3>
             <figure class="footer-logo">
                 <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
                     title="Work Balance logo in footer">
-                <figcaption>Work Balance Logo</figcaption>
             </figure>
             <p class="copyright-text">
                 &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
