--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -70,9 +70,9 @@
 
   <!-- TAKE BREAKS SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">Main container of "WHAT IS BURNOUT" section.</h2>
+    <h2 class="visually-hidden">Main container for "TAKE BREAKS" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Container split in 2.</h2>
+      <h2 class="visually-hidden">Container split in 2 for image and text.</h2>
       <figure class="picture-box">
         <img src="img/playing-table-games.webp" alt="Two people playing a table game for social engagement"
           title="Engaging in social games for mental well-being">
@@ -101,9 +101,9 @@
 
   <!-- BOUNDARIES SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">Main container of "BOUNDARIES" section.</h2>
+    <h2 class="visually-hidden">Main container for the "BOUNDARIES" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Container split in 2.</h2>
+      <h2 class="visually-hidden">Image and text content for setting boundaries.</h2>
       <figure class="picture-box">
         <img src="img/boundaries.webp" alt="Respect my boundaries" title="Learn how to set and maintaining boundaries">
         <figcaption>
@@ -133,7 +133,7 @@
   <section class="split-in-2 reverse white-bg">
     <h2 class="visually-hidden">Main container of "SEEK MENTAL HELP" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Container split in 2.</h2>
+      <h2 class="visually-hidden">Image and text content for seeking mental health support.</h2>
       <figure class="picture-box">
         <img src="img/seek-help-picture1.webp" alt="Seek mental health support"
           title="Mental health support for burnout recovery">
@@ -164,7 +164,7 @@
   <section class="split-in-2">
     <h2 class="visually-hidden">Main container of "PRACTICE SELFCARE" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Container split in 2.</h2>
+      <h2 class="visually-hidden">Image and text content for practicing self-care.</h2>
       <figure class="picture-box">
         <img src="img/girl-reading-book.webp" alt="Person reading a book for relaxation"
           title="Practicing self-care through reading">
@@ -195,7 +195,7 @@
   <section class="isolation">
     <h2 class="visually-hidden">Main container of "ISOLATION" section.</h2>
     <section class="inner-isolation">
-      <h2 class="visually-hidden">Inner container containing all content.</h2>
+      <h2 class="visually-hidden">Practical tips for overcoming isolation.</h2>
       <article class="isolation-text">
         <h2>Dealing with Isolation</h2>
         <p>
@@ -214,9 +214,9 @@
         </p>
       </article>
 
-      <!-- INFORMATION BLOCKS SECTION -->
+      <!-- FIRST ROW OF INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Container containing all 3 blocks.</h2>
+        <h2 class="visually-hidden">Isolation strategies to stay connected and engaged.</h2>
         <article class="block-1">
           <h2 class="visually-hidden">Block 1 container.</h2>
           <p><strong>1. Schedule Virtual Coffee Chats</strong></p>
@@ -229,7 +229,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Block 2 container.</h2>
+          <h2 class="visually-hidden">Join Online Communities with Shared Interests.</h2>
           <p>
             <strong>2. Join Online Communities with Shared Interests</strong>
           </p>
@@ -241,7 +241,7 @@
         </article>
 
         <article class="block-3">
-          <h2 class="visually-hidden">Block 3 container.</h2>
+          <h2 class="visually-hidden">Take Part in Offline Activities.</h2>
           <p><strong>3. Take Part in Offline Activities</strong></p>
           <p>
             Step away from the screen by participating in local events,
@@ -252,11 +252,11 @@
         </article>
       </section>
 
-      <!-- INFORMATION BLOCKS SECTION -->
+      <!-- SECOND ROW OF INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Container containing all 3 blocks.</h2>
+        <h2 class="visually-hidden">Extra ideas for overcoming feelings of isolation.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">Block 4 container.</h2>
+          <h2 class="visually-hidden">Work from Co-Working Spaces.</h2>
           <p><strong>4. Work from Co-Working Spaces</strong></p>
           <p>
             Co-working spaces offer an opportunity to work alongside others,
@@ -267,7 +267,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Block 5 container.</h2>
+          <h2 class="visually-hidden">Set Up a Buddy System.</h2>
           <p>
             <strong>5. Set Up a Buddy System</strong>
           </p>
@@ -279,7 +279,7 @@
         </article>
 
         <article class="block-3">
-          <h2 class="visually-hidden">Block 6 container.</h2>
+          <h2 class="visually-hidden">Volunteer in Your Community.</h2>
           <p><strong>6. Volunteer in Your Community</strong></p>
           <p>
             Get involved in local volunteering opportunities. Helping others
@@ -294,7 +294,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p><strong><em>Quick Breaks:</em></strong></p>
+      <h2><strong><em>Quick Breaks:</em></strong></h2>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
         <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
@@ -305,11 +305,10 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
+      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
-        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
