--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -47,9 +47,9 @@
 
   <!-- COMFORTABLE WORKSPACE SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">Main container for "WORKSPACE" section.</h2>
+    <h2 class="visually-hidden">Main container for the "Comfortable Workspace" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">Inner container for "WORKSPACE" section</h2>
+      <h2 class="visually-hidden">Content about the benefits of a comfortable workspace.</h2>
       <article>
         <h2>The Importance of a Comfortable Workspace</h2>
         <p>
@@ -65,16 +65,16 @@
 
   <!-- BENEFITS OF A COMFORTABLE WORKSPACE SECTION -->
   <section class="isolation">
-    <h2 class="visually-hidden">Main container for "BENEFITS OF A COMFORTABLE WORKSPACE" section.</h2>
+    <h2 class="visually-hidden">Main container for the "Benefits of a Comfortable Workspace" section.</h2>
     <section class="inner-isolation">
-      <h2 class="visually-hidden">inner container for "BENEFITS OF A COMFORTABLE WORKSPACE" section</h2>
+      <h2 class="visually-hidden">Content about the benefits of a comfortable workspace.</h2>
       <article class="isolation-text">
         <h2>Benefits of a Comfortable Workspace</h2>
       </article>
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Blocks wrapper</h2>
+        <h2 class="visually-hidden">Overview of key benefits for a comfortable workspace.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">Block 1 with all information</h2>
+          <h2 class="visually-hidden">Physical Health Benefits</h2>
           <p><strong>Physical Health</strong></p>
           <p>
             A comfortable workspace can prevent physical strain and long-term
@@ -87,7 +87,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Block 2 with all information</h2>
+          <h2 class="visually-hidden">Focus and Productivity Improvements</h2>
           <p>
             <strong>Improved Focus and Productivity</strong>
           </p>
@@ -102,7 +102,7 @@
       </section>
 
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Blocks Wrapper</h2>
+        <h2 class="visually-hidden">Mental Well-being Advantages</h2>
         <article class="block-1">
           <h2 class="visually-hidden">Block 3 with all information</h2>
           <p><strong>Mental Well-being</strong></p>
@@ -115,7 +115,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Block 4 with all information</h2>
+          <h2 class="visually-hidden">Creativity Enhancement</h2>
           <p>
             <strong>Increased Creativity</strong>
           </p>
@@ -133,7 +133,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <nav class="quick-links">
-      <p><strong><em>Quick Breaks:</em></strong></p>
+      <h2><strong><em>Quick Breaks:</em></strong></h2>
       <ul class="footer-navbar-links">
         <li><a href="index.html" class="navbar-link">Home</a></li>
         <li><a href="wellbeing-tips.html" class="navbar-link">Wellbeing Tips</a></li>
@@ -144,11 +144,10 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h2 class="visually-hidden">Main container for the part below quick links.</h2>
+      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
-        <figcaption>Work Balance Logo</figcaption>
       </figure>
       <p class="copyright-text">
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
